<resources>
    <string name="app_name">Waves of Coxs Bazar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="youarehere">You are here.</string>
    <string name="sendquery">You want to send a query?</string>
    <string name="q1">If you have any query to know. Send an Email at \n</string>
    <string name="q2">\nor\nJust send a message to \n</string>
    <string name="qry">Send your Query</string>
    <string name="helpline"> helpline</string>
    <string name="yqry">Your Query about hotel Goes here.........</string>
    <string name="sms">Send sms</string>
    <string name="roombook">Book Room</string>
    <string name="query">Query</string>
    <string name="airweb">Do you want to visit</string>
    <string name="airweb2">website to see farelist?</string>
    <string name="hweb1">Do you want to visit this hotels website for room booking info?</string>
    <string name="visit">Visit</string>
    <string name="bdair">Biman Bangladesh Airlines</string>
    <string name="usbd">US-Bangla Airlines</string>
    <string name="novo">Novoair</string>
    <string name="regent">Regent Airways</string>
    <string name="united">United Airways</string>
    <string name="share">Share</string>
    <string name="action_settings">About Us</string>
    <string name="title_activity_event">ইভেন্ট</string>
    <string name="title_activity_event2">Event2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_example2">example2Activity</string>
    <string name="title_activity_example32">লাইফ স্টাইল</string>
    <string name="title_activity_zed_sky">জেটস্কি</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Nearby places</string>
    <string name="pick_place">Choose a place</string>
    <string name="getPlace">Geting your nearest places....</string>
    <string name="slowInternet">Failed! Due to slow Internet connection.</string>
<string name="noData">Sorry! No data available.</string>
    <string name="market1">Bilkis Market</string>
    <string name="market2">Laldighir Par\nMobile amp; Accessories</string>
    <string name="market3">Coral Reef Plaza</string>
    <string name="market4">Cox\'s Bazar</string>
    <string name="market5">Eden Garden Market</string>
    <string name="market6">Laldighir Par</string>
    <string name="market7">Fazal Market</string>
    <string name="market8">East Laldighir Par</string>
    <string name="market9">Firoza Market</string>
    <string name="market10">Paan Bazar</string>
    <string name="market11">Kabir Burmese Market</string>
    <string name="market12">Bazar Ghata</string>
    <string name="market13">M.L.Shopping Complex</string>
    <string name="market14">Buddhist Temple Road</string>
    <string name="market15">New Market</string>
    <string name="market16">Bazar Ghata</string>
    <string name="market17">Pouro Samabay Super Market</string>
    <string name="market18">Bazar Ghata\nCosmetics</string>
    <string name="market19">Rashid Market</string>
    <string name="market20">East Laldighir Par</string>
    <string name="market21">Salam Market</string>
    <string name="market22">Bazar Ghata</string>
    <string name="market23">Shafique Center</string>
    <string name="market24">Main Road</string>
    <string name="market25">Super Market</string>
    <string name="market26">Bazar Ghata</string>
    <string name="market27">BazarGhata Shutki Market</string>
    <string name="market28">East Bazar Ghata</string>
    <string name="permission">Call Permission</string>
    <string name="vpermission">Visit website</string>
<string name="popUp">Do you wannt to make a phone call to this number?</string>
    <string name="doCall">Call</string>
    <string name="num1">Executive Magistrate, Parjatan</string>
    <string name="num11">01733373127</string>
    <string name="num2">Tourist Police 1</string>
    <string name="num22">01769690732</string>
    <string name="num3">Tourist Police 2</string>
    <string name="num33">01799900066</string>
    <string name="noInternetMessage">No internet connection on your device. Would you like to enable it?</string>
    <string name="noInternetTitle">No Internet Connection</string>
    <string name="enableInternet"> Enable Internet </string>
    <string name="restartWave">Restart WAVES OF COX\'S BAZAR\nAfter enabling Internet connection.</string>
    <string name="restartCancle"> Cancel </string>
    <string name="internet_error">Please check your internet connection.</string>
    <string name="wait">Wave of Cox\'s Bazar</string>
    <string name="greet">Welcome to Cox\'s Bazar.....</string>
    <string name="tideHeadLine">\n10 days Tide Forcast for Cox\'s Bazar\n</string>
    <string name="tideEx"> Example: How Tide Forcast arranged.\n\t\tScroll Down to see the realtime Tide Forcast\n</string>
    <string name="tideExclimation">\nThe tidal prediction for Cox\'s Bazar is just that, a well educated guess based on years of observed data. Many factors will affect the tide tables at Cox\'s Bazar including local winds and pressure systems.\n</string>
    <string name="tideForcast">Another Tide-Forecast Source\n</string>
    <string name="pleaseWait">Please wait....</string>
    <string name="op_headline">[ We welcome your complain / suggestion ]</string>
    <string name="op_title">Opinion Type*</string>
    <string name="op_suggestion">Suggestion</string>
    <string name="op_complain">Complain</string>
    <string name="op_tottho">Info.</string>
    <string name="op_query">Query</string>
    <string name="op_name">Name*:</string>
    <string name="op_email">Email(Optional):</string>
    <string name="op_desc">Description*:</string>
    <string name="op_phone">Phone*:</string>
    <string name="op_submit">Submit</string>
    <string name="op_success">Thank You! Your Conplain Successfully Submitted!.</string>
    <string name="op_danger">Oh Sorry! Fill up the required fields and try submitting again.</string>
    <string name="op_warning">Warning! Select any of the Complain or Opinion type first.</string>
    <string name="scrolling_line">Keep your city clean. Follow Tide Forecast. Stay safe and get help from law enforcement agencies in any kind of crisis.</string>
    <string name="icon_transport">Transport</string>
    <string name="icon_hotel_motel">Hotels</string>
    <string name="icon_tour_travels">Travel agencies</string>
    <string name="icon_restaurant">Restaurants</string>
    <string name="icon_hospital">Hospitals</string>
    <string name="icon_beach_activities">Beach experience</string>
    <string name="icon_life_style">Lifestyle</string>
    <string name="icon_location">My NearBy</string>
    <string name="icon_tidal_forcast">Tide Forecast</string>
    <string name="icon_impt_numbers">Impt. numbers</string>
    <string name="icon_opinion">Opinion Box</string>
    <string name="icon_helpline">Helpline</string>
    <string name="icon_photographar">Photographer</string>
    <string name="icon_beach_bike">Beach bike</string>
    <string name="icon_jet_ski">Jet Ski</string>
    <string name="icon_para_seiling">Parasailing</string>
    <string name="item_shopping_centre">Shopping Centre</string>
    <string name="item_cultural_centre">Cultural Centre</string>
    <string name="item_events">Events</string>
    <string name="item_entertainment">Entertainment</string>
    <string name="item_car_rental">Car rental</string>
    <string name="item_bus_service">Bus Service</string>
    <string name="item_airline">Airlines</string>
    <string name="language_setting">Change Language</string>
    <string name="lang_dialog_title">Change App Language</string>
    <string name="lang_dialog_message">Select a language</string>
    <string name="change">Change</string>
    <string-array name="lang_select">
        <item>English</item>
        <item>Bangla</item>
    </string-array>
    <string name="feedbacktype1">অভিযোগ</string>
    <string name="feedbacktype2">Gripe</string>
    <string name="feedbacktype3">পরামর্শ</string>
    <string name="feedbacktype4">Bug</string>
    <string-array name="feedbacktypelist">
        <item>@string/feedbacktype1</item>
        <item>@string/feedbacktype2</item>
        <item>@string/feedbacktype3</item>
        <item>@string/feedbacktype4</item>
    </string-array>
    <string name="title_activity_hotelmotel2">হোটেল মোটেল</string>
    <string name="title_activity_ainsri">আইন শৃঙ্খলা বাহিনী</string>
    <string-array name="shoping_array">
        <item>শপিং লিস্ট ১</item>
        <item>শপিং লিস্ট ২</item>
        <item>শপিং লিস্ট ৩</item>
        <item>শপিং লিস্ট ৪</item>
        <item>শপিং লিস্ট ৫</item>
        <item>শপিং লিস্ট ৬</item>
        <item>শপিং লিস্ট ৭</item>
        <item>শপিং লিস্ট ৮</item>
    </string-array>
    <string-array name="madical_array">
        <item>মেডিকেল লিস্ট ১</item>
        <item>মেডিকেল লিস্ট ২</item>
        <item>মেডিকেল লিস্ট ৩</item>
        <item>মেডিকেল লিস্ট ৪</item>
        <item>মেডিকেল লিস্ট ৫</item>
        <item>মেডিকেল লিস্ট ৬</item>
        <item>মেডিকেল লিস্ট ৭</item>
        <item>মেডিকেল লিস্ট ৮</item>
    </string-array>
    <string-array name="food_array">
        <item>ফুড লিস্ট ১</item>
        <item>ফুড লিস্ট ২</item>
        <item>ফুড লিস্ট ৩</item>
        <item>ফুড লিস্ট ৪</item>
        <item>ফুড লিস্ট ৫</item>
        <item>ফুড লিস্ট ৬</item>
        <item>ফুড লিস্ট ৭</item>
        <item>ফুড লিস্ট ৮</item>

    </string-array>
    <string-array name="hospital_names">
        <item>District Hospital</item>
        <item>Sea Side Hospital</item>
        <item>Fuad Al khatib Hospital</item>
        <item>Baitush Sharaf Hospital</item>
        <item>Community Eye Hospital</item>
        <item>Cox National Hospital</item>
        <item>ZamZam Hospital</item>
        
    </string-array>
    <string name="tutaklistTitel">List of Registered Tour and Travel agencies in Cox\'s Bazar\n</string>
    <string name="gpsOff">GPS is disabled in your device. Do you want to Enable it?</string>
    <string name="enableGps">Enable GPS</string>
    <string name="cancleGps">Cancel</string>
    <string-array name="hospital_email">
        <item>Mobile Phone Health Service</item>
        <item>Central Jam-E-Masjid Road</item>
        <item>Central Jam-E-Masjid Road</item>
        <item>Baitush Sharaf Road</item>
        <item>Main Road</item>
        <item>Sezan Mansion Hospital Road</item>
        <item>Eid-Gah Sadar</item>
        
    </string-array>
    <string-array name="hospital_mobile">
        <item>01730324770</item>
        <item>034163606</item>
        <item>034164674</item>
        <item>034163911</item>
        <item>0341623120</item>
        <item>01843172100</item>
        <item>01558633683</item>
        <item>01930529223</item>
    </string-array>
    <string-array name="res_names">
        <item>Poushee Restaurant</item>
        <item>EFC - A Live Fish Restaurant</item>
        <item>Jhaubon Restaurant</item>
        <item>Mermaid Cafe</item>
        <item>Niribili Orchid Club and Restaurant</item>
        <item>Sea Lamp Beach Cafe</item>
        <item>Devine Sea Stone Cafe</item>
        
    </string-array>
    <string-array name="res_email">
        <item>Poushee@gmail.com</item>
        <item>efclive@gmail.com</item>
        <item>jhaubon@gmail.com</item>
        <item>mermaidcafe@gmail.com</item>
        <item>niribili@gmail.com</item>
        <item>sealamp@gmail.com</item>
        <item>devinesea@gmail.com</item>
        
    </string-array>
</resources>