<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainui7"
    android:orientation="vertical"
    tools:context="com.parvez_n_jabed_co.waves_of_coxbazar.TideActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtTide1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/tideHeadLine"
                android:textSize="16sp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/tidehelp"/>
            <TextView
                android:id="@+id/txtTide2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/tideEx"
                android:textSize="15sp"/>
            <WebView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/webView"
                />
            <TextView
                android:id="@+id/txtTide3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/tideExclimation"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/txtTide5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/tideForcast"
                android:textSize="16sp"/>
            <WebView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/webView1"
                />

        </LinearLayout>


    </ScrollView>




</LinearLayout>
