 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mainui4"
        android:orientation="vertical"
        android:weightSum="12"
     android:padding="5dp">
     <LinearLayout
         android:id="@+id/alertLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
         android:orientation="vertical"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:paddingTop="3dp"
            android:layout_weight="1">
            <com.beardedhen.androidbootstrap.BootstrapLabel
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                app:bootstrapBrand="primary"
                app:bootstrapHeading="h6"
                android:textSize="15dp"
                android:gravity="center_horizontal"
                android:text="@string/op_headline"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="@color/bootstrap_dropdown_divider">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <com.beardedhen.androidbootstrap.BootstrapLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                app:bootstrapBrand="success"
                app:bootstrapHeading="h5"
                android:textStyle="bold"
                android:layout_weight=".5"
                android:text="@string/op_title"
                android:gravity="center_horizontal"/>
            <com.beardedhen.androidbootstrap.BootstrapButtonGroup
                app:buttonMode="radio"
                app:bootstrapBrand="danger"
                android:id="@+id/radioGroupType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1.5"
                android:weightSum="4"
                android:orientation="horizontal">
                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/RBsuggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:textColor="#ffffff"
                    android:text="@string/op_suggestion"/>
                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:layout_width="wrap_content"
                    android:id="@+id/RBcomplain"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:layout_height="match_parent"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:text="@string/op_complain"/>
                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/RBbugreport"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:text="@string/op_tottho"/>
                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/RBquery"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:text="@string/op_query"/>
            </com.beardedhen.androidbootstrap.BootstrapButtonGroup>

        </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
         android:background="@color/bootstrap_dropdown_divider">
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
         android:layout_weight="1">
         <com.beardedhen.androidbootstrap.BootstrapLabel
             app:bootstrapBrand="success"
             app:bootstrapHeading="h6"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:paddingLeft="2dp"
             android:labelFor="@+id/ETname"
             android:gravity="center"
             android:textStyle="bold"
             android:text="@string/op_name"/>
         <com.beardedhen.androidbootstrap.BootstrapEditText
             app:bootstrapBrand="success"
             app:roundedCorners="true"
             android:id="@+id/ETname"
             android:paddingLeft="3dp"
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
         android:background="@color/bootstrap_dropdown_divider">
     </LinearLayout>
     <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
         <com.beardedhen.androidbootstrap.BootstrapLabel
             app:bootstrapBrand="success"
             app:bootstrapHeading="h6"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:paddingLeft="2dp"
             android:labelFor="@+id/ETemail"
             android:gravity="center"
             android:textStyle="bold"
             android:text="@string/op_email"/>
         <com.beardedhen.androidbootstrap.BootstrapEditText
             app:bootstrapBrand="success"
             app:roundedCorners="true"
             android:id="@+id/ETemail"
             android:paddingLeft="3dp"
             android:inputType="textEmailAddress"
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
         android:background="@color/bootstrap_dropdown_divider">
     </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5">
            <com.beardedhen.androidbootstrap.BootstrapLabel
                app:bootstrapBrand="success"
                app:bootstrapHeading="h6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="2dp"
                android:labelFor="@+id/ETdescription"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/op_desc"/>
            <com.beardedhen.androidbootstrap.BootstrapEditText
                app:bootstrapBrand="success"
                app:roundedCorners="true"
                android:id="@+id/ETdescription"
                android:paddingLeft="3dp"
                android:maxLength="200"
                android:textStyle="bold"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
         android:background="@color/bootstrap_dropdown_divider">
     </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <com.beardedhen.androidbootstrap.BootstrapLabel
                app:bootstrapBrand="success"
                app:bootstrapHeading="h6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="2dp"
                android:labelFor="@+id/ETemail"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/op_phone"/>
            <com.beardedhen.androidbootstrap.BootstrapEditText
                app:bootstrapBrand="success"
                app:roundedCorners="true"
                android:id="@+id/ETphone"
                android:paddingLeft="3dp"
                android:inputType="textEmailAddress"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
         android:background="@color/bootstrap_dropdown_divider">
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1.5">
         <com.beardedhen.androidbootstrap.BootstrapButton
             app:bootstrapBrand="primary"
             app:roundedCorners="true"
             android:id="@+id/btnSubmit"
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:textAllCaps="true"
             android:layout_height="match_parent"
             android:onClick="submitComplain"
             android:text="@string/op_submit"/>
     </LinearLayout>


 </LinearLayout>
