<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hotline"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainui7"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.parvez_n_jabed_co.waves_of_coxbazar.HotlineActivity">

        <LinearLayout
            android:weightSum="5"
            android:paddingTop="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout11m"

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="9"
                >
                <!--
                        <item>Biman Bangladesh Airlines</item>
                        <item>US-Bangla Airlines</item>
                        <item>Novoair</item>
                        <item>Regent Airways</item>
                        <item>United Airways</item>
                -->

                <LinearLayout
                    android:background="#50000000"

                    android:layout_width="match_parent"
                    android:layout_weight="4"
                    android:layout_height="0dp">
                    <TextView
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:text="@string/num1"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="4"
                    android:background="#50000000"
                    android:layout_height="0dp">
                    <TextView
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:text="@string/num11"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:id="@+id/layout22p"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="9"
                >
                <!--
                        <item>Biman Bangladesh Airlines</item>
                        <item>US-Bangla Airlines</item>
                        <item>Novoair</item>
                        <item>Regent Airways</item>
                        <item>United Airways</item>
                -->

                <LinearLayout
                    android:background="#50000000"

                    android:layout_width="match_parent"
                    android:layout_weight="4"
                    android:layout_height="0dp">
                    <TextView
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:text="@string/num2"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="4"
                    android:background="#50000000"
                    android:layout_height="0dp">
                    <TextView
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:text="@string/num22"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout21m"

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="9"
                >
                <!--
                        <item>Biman Bangladesh Airlines</item>
                        <item>US-Bangla Airlines</item>
                        <item>Novoair</item>
                        <item>Regent Airways</item>
                        <item>United Airways</item>
                -->

                <LinearLayout
                    android:background="#50000000"

                    android:layout_width="match_parent"
                    android:layout_weight="4"
                    android:layout_height="0dp">
                    <TextView
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:text="@string/num3"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="4"
                    android:background="#50000000"
                    android:layout_height="0dp">
                    <TextView
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:text="@string/num33"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

</RelativeLayout>
